Trapping rain water problem increasing height each time implementation has been improved.